# self-app

./: auto-imports.d.ts  components.d.ts  package.json  pnpm-lock.yaml  postcss.config.cjs  vite.config.js
.github/workflows/: release.yml
src/: App.vue  app.js  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  utils.rs
src-tauri/src/tray/: mod.rs
src-tauri/src/window/: cmd.rs
src/api/: stockApi.ts
src/assets/stylesheets/: application.scss
src/assets/stylesheets/application/: _reset.scss
src/assets/stylesheets/globalInjectedData/: _variables.scss
src/components/: Greet.vue
src/components/layouts/: BaseLayout.vue  Breadcrumb.vue  LeftSide.vue
src/router/: index.js
src/services/: SqliteService.js  Storage.js  index.js
src/stores/: app.js  index.js  user.js
src/utils/apiAxios/: index.js  supportMetaCancelToken.js
src/utils/hooks/: useDialog.jsx  useList.js  useRouter.js
src/views/controlPanel/: index.vue
src/views/home/: index.vue
src/views/others/stocks/: Form.vue  index.vue
src/views/topics/: JuejinTopCard.vue  SegmentfaultTopCard.vue  ZhihuTopCard.vue  index.vue
